added sample layout.

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="dist/semantic.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
